# all-an.github.io

./: .gitattributes  .gitignore  .vimrc  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TESTING.md  about.html  app.elm  blog.html  cloudlogin.html  cloudsimulator.html  compile-kotlin.bat  compile-rust.bat  contact.html  data science portfolio.html  error.html  game.html  game.js  index-js.html  index.html  index2.html  jest.setup.js  main-style.css  main.js  package-lock.json  package.json  run-tests.sh  run_js_tests.sh  script.js  style-contact.css  style.css  style2.css  terminal.css  terminal.html  test.js  test.sh
0001/: style.css  test.html
1_0_0/: test.py
all-an/: Cargo.toml  TESTS.md
all-an/pkg/: all_an.d.ts  all_an.js  all_an_bg.wasm  all_an_bg.wasm.d.ts
all-an/src/: lib.rs  particles.rs
archive/: main-style.css  main.js
benchmarking/: README.md  bench.html  bench.js  bench.nim  benchnim.js
brython/: index.html
concepts/: index.html
contact/: contact.html  style-contact.css
coverage/: firebase-config.js.html  index.html  terminal.js.html  textadventure.js.html  vim.js.html
css/: cloudlogin.css  cloudsimulator.css  style.css
games/: games.html
java-gwt/: README.md  build.bat  build.sh  pom.xml
js/: firebase-config.js  terminal.js  textadventure.js  vim.js
kotlin/: build.gradle.kts  settings.gradle.kts
learn/: index.html
new-page/: index.html  script.js  style.css
nim/: README.md  terminal.js  terminal.nim
old-page/: index.html
portfolio_files/: style.css
see/: a.out  guess.c
src/: lib.rs  main.rs
terminal/: style.css
(+592 files in other folders)
