[package]
name = "allangithubio"
version = "0.1.0"
edition = "2021"

[lib]
name = "allangithubio"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "allangithubio"
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Window",
  "Storage",
  "Location",
  "History",
  "Event",
  "KeyboardEvent",
  "InputEvent",
  "MouseEvent",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = { version = "0.10", features = ["timers", "storage"] }
gloo-console = "0.3"