[package]
name = "all-an"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlBodyElement",
    "Window",
    "Node",
    "NodeList",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
